# RecSys-Lite

./: .coverage  .coverage.MacBook-Pro-6.local.20544.XBYTPNlx  .dockerignore  .gitignore  .mypy.ini  CHANGELOG.md  CLAUDE.md  DEMO.md  Makefile  README.md  direct_test.py  generate_model.py  mypy.ini  pre-push.hook  pyproject.toml  requirements.txt  run_api.py  run_ci_locally.sh  setup.py  simple_api.py  simple_ingest.py  simple_test.py  sitecustomize.py  test_acceptance.py  test_api.py  test_logging.py
.github/workflows/: auto-fix.yml  ci.yml  push-summary.yml
data/sample_data/: create_sample_data.py  events.parquet  items.csv
docker/: Dockerfile  Dockerfile.simple  Dockerfile.test  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  generate-sbom.sh
docs/: architecture.md  error_handling.md  logging.md  runbook.md  vector_service.md
sbom/: recsys-lite-api.cyclonedx.json  recsys-lite-api.spdx.json  recsys-lite-worker.cyclonedx.json  recsys-lite-worker.spdx.json
src/recsys_lite/: __init__.py  cli.py
src/recsys_lite/api/: __init__.py  dependencies.py  errors.py  loaders.py  main.py  models.py  services.py  state.py
src/recsys_lite/cli/: __init__.py  gdpr.py  ingest.py  model.py  optimize.py  serve.py  types.py
src/recsys_lite/indexing/: __init__.py  faiss_index.py
src/recsys_lite/ingest/: __init__.py  ingest.py
src/recsys_lite/models/: __init__.py  als.py  base.py  bpr.py  ease.py  gru4rec.py  gru4rec_mock.py  hybrid.py  hybrid_mock.py  item2vec.py  lightfm_mock.py  lightfm_model.py  text_embedding.py  text_embedding_mock.py
src/recsys_lite/optimization/: __init__.py  metrics.py  optimizer.py
src/recsys_lite/update/: __init__.py  worker.py
src/recsys_lite/utils/: __init__.py  logging.py
test_data/data/: items.json
test_data/incremental/: new_events.parquet
test_data/model_artifacts/als/: als_model.pkl  item_mapping.json  user_mapping.json
test_scripts/: kafka_producer.py  rabbitmq_producer.py  test_api.py  test_api_simple.py  test_update_worker.py  test_worker_simple.py
tests/: __init__.py  conftest.py  test_api.py  test_api_improved.py  test_cli.py  test_faiss_index.py  test_gru4rec.py  test_helpers.py  test_ingest.py  test_lightfm_model.py  test_models.py  test_mq_ingest.py  test_optimization.py  test_vector_service.py
widget/: .npmignore  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
widget/.storybook/: main.ts
widget/public/: index.html
widget/src/: RecommendationCarousel.stories.tsx  RecommendationCarousel.test.tsx  RecommendationCarousel.tsx  demo.tsx  index.ts
widget/src/__mocks__/: lucide-react.js  (+2 more)
(+6 files in other folders)
