[tool.poetry]
name = "recsys-lite"
version = "0.1.0"
description = "Lightweight recommendation system for small e-commerce shops"
authors = ["RecSys-Lite Team <info@recsys-lite.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "recsys_lite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.2.2"
typer = ">=0.8.0,<0.9.0"
implicit = "^0.7.0"
gensim = "^4.3.1"
# Using LightFM 1.17 (latest version)
# Skipped in CI environment by using mock implementation
lightfm = {version = "==1.17", optional = true}
optuna = ">=3.3.0,<4.0.0"
faiss-cpu = "^1.7.4"
fastapi = ">=0.100.0,<0.101.0"
uvicorn = ">=0.23.0,<0.24.0"
pydantic = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.2.3"
pyarrow = "^15.0.0"
# Message Queue support (optional dependencies)
pika = {version = "^1.3.2", optional = true}
kafka-python = {version = "^2.0.2", optional = true}

[tool.poetry.extras]
mq = ["pika", "kafka-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.0"
ruff = "^0.1.8"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
requests = "^2.32.3"
httpx = "^0.27.0"
optuna = "^3.3.0"
gensim = "^4.3.1"

[tool.poetry.scripts]
recsys-lite = "recsys_lite.cli:app"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false  # Allow Any for generics to be more flexible
disallow_subclassing_any = false  # Allow subclassing Any for torch classes
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Handle third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "faiss",
    "implicit.*",
    "gensim.*",
    "torch.*",
    "lightfm.*",
    "duckdb"
]
ignore_missing_imports = true

# Be more lenient with model implementations that use external dependencies
[[tool.mypy.overrides]]
module = [
    "recsys_lite.models.*",
    "recsys_lite.api.main",
    "recsys_lite.cli"
]
ignore_errors = true

[tool.ruff]
line-length = 100           # wider but still readable
target-version = "py311"
select = ["E", "F", "B", "I"]
extend-select = ["I"]       # keep import‑sort rule
ignore = ["B008"]  # Ignore function calls in argument defaults (common in FastAPI/Typer)

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E402"]     # test fixtures can keep inline imports

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"